llvm/test/tools/llubi/lib_double_free.ll
; NOTE: Assertions have been autogenerated by utils/update_llubi_test_checks.py UTC_ARGS: --version 6
; RUN: not llubi --verbose < %s 2>&1 | FileCheck %s

declare ptr @malloc(i64)
declare void @free(ptr)

define i32 @main() {
entry:
  %ptr = call ptr @malloc(i64 4)

  call void @free(ptr %ptr)

  call void @free(ptr %ptr)

  ret i32 0
}
; CHECK: Entering function: main
; CHECK-NEXT:   %ptr = call ptr @malloc(i64 4) => ptr 0x10 [ptr]
; CHECK-NEXT:   call void @free(ptr %ptr)
; CHECK-NEXT: Stacktrace:
; CHECK-NEXT: #0   call void @free(ptr %ptr) at @main
; CHECK-NEXT: Immediate UB detected: double-freeing a memory object allocated at 0x10.
; CHECK-NEXT: error: Execution of function 'main' failed.
